--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <option value="30plusmin">30+ minutes</option><br>
                 </select><br><br>
                 <input type="submit"><br><br>
-                            <a href="results.html">Head to the informational page!</a>
+                            <!-- <a href="results.html">Head to the informational page!</a> -->
 
                 
                 
