--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 
                 <h3><label for="time">How long does it take you to get to school?</label></h3>
                 <select id="time" name="timetoschool">
-                <option value="5min"> less than 5 minutes</option>
+                <option value="less5min"> less than 5 minutes</option>
                 <option value="5min">5 minutes</option>
                 <option value="10min">10 minutes</option>
                 <option value="20min">20 minutes</option>
